# wxMinesweeper

./: .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  ValgrindOut.xml  field.cpp  field.h  minesweeper.cbp  minesweeper.cpp  minesweeper.cxx  minesweeper.depend  minesweeper.h  minesweeper.layout  red.xpm  script.sh
.github/workflows/: cmake-multi-platform.yml
doxygen/: doxyfile
libs/wxWidgets-3.2.4/: Dockerfile  Dockerfile.bk
libs/wxWidgets-3.2.4/demos/forty/: forty
{PROJECT_BINARY_DIR}/: clock.xpm
